<resources>
    <string name="app_name">練習アプリ</string>
    <string name="sub_title">サブ画面タイトル</string>
    <string name="hint">名前を入力してください</string>
    <string name="drink">ドリンク</string>
    <string name="food">フード</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="name">名前</string>
    <string name="button">確認</string>
    <string name="clear">クリア</string>
    <string name="send">送信</string>
    <string name="profiel">プロフィール</string>
    <string name="password">パスワードは数値で入力してください</string>
    <string name="nendai">年代</string>
    <string name="jyuudai">10代</string>
    <string name="nijyuudai">20代</string>
    <string name="sanjyuudai">30代</string>
    <string name="seibetu">性別</string>
    <string name="datanyuuryoku">データを入力してください</string>
    <string name="button2">データ追加</string>
    <string name="kansou">感想を入力してください</string>
    <string name="hozon">保存</string>
    <string name="cansel">キャンセル</string>
    <string name="reset">リセット</string>
    <string name="kensaku">検索</string>
    <string name="Opencamera">カメラ起動</string>
    <string-array name="currylist">
        <item>ドライカレー</item>
        <item>カツカレー</item>
    </string-array>
</resources>