<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profielText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/profiel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/clearN"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profielText" />

    <Button
        android:id="@+id/clearN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profielText" />

    <EditText
        android:id="@+id/passText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/clearP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText4" />

    <Button
        android:id="@+id/clearP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearN" />

    <Button
        android:id="@+id/kakuninButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passText" />

    <TextView
        android:id="@+id/nendaiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/nendai"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/check10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passText" />

    <CheckBox
        android:id="@+id/check10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/jyuudai"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/check20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nendaiText" />

    <CheckBox
        android:id="@+id/check20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/nijyuudai"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/check30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check10" />

    <CheckBox
        android:id="@+id/check30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/sanjyuudai"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/kakuninButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check20" />

    <TextView
        android:id="@+id/seibetuText"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/seibetu"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/check10"
        app:layout_constraintTop_toBottomOf="@+id/passText" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/kakuninButton"
        app:layout_constraintStart_toEndOf="@+id/check20"
        app:layout_constraintTop_toBottomOf="@+id/seibetuText">

        <RadioButton
            android:id="@+id/man_rb2"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:checked="true"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/woman_rb2"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:text="@string/woman" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>